[build-system]
requires = ["setuptools", "numpy"]

[project]
dependencies = [
    "numpy >= 1.18",
    "matplotlib >= 3.0",
    "pandas >= 1.0",
    "pybind11",
    "scikit-learn >= 1.0",
    "seaborn >= 0.11",
    "streamlit",
    "awkde @ git+https://github.com/noxtoby/awkde.git",
    "kde_ebm @ git+https://github.com/ucl-pond/kde_ebm.git",
    "tqdm"
]