[tool.poetry]
name = "streamlit_ebm"
version = "0.0.1"
authors = ["Cameron Shand"]
description = ""

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"
matplotlib = "^3.0"
pandas = "^1.0"
pybind11 = "*"
scikit-learn = "^1.0"
seaborn = "*"
streamlit = "*"
tqdm = "*"
awkde = {git = "https://github.com/noxtoby/awkde.git"}
kde_ebm = {git = "https://github.com/ucl-pond/kde_ebm.git", branch="numpy"}

[build-system]
requires = ["setuptools", "numpy >= 1.18", "wheel"]